fix: replace the summaries truncated indicator (dots) with the read more button
Closes #387

--- a/assets/hb/modules/blog/scss/post/_summary.scss
+++ b/assets/hb/modules/blog/scss/post/_summary.scss
@@ -9,9 +9,3 @@
         margin-bottom: 0;
     }
 }
-
-.summary-truncated {
-    &::after {
-        content: "…";
-    }
-}
